syntax = "proto3";

service BleveSearch {
  rpc Search(SearchRequest) returns (SearchResponse) {}
  rpc Create(CreateRequest) returns (CreateResponse) {}
}

message SearchRequest {
  string term = 1;
  int64 from = 2;
  int64 size = 3;
  string category = 4;
  string url = 5;
  int64 depth = 6;
  string type = 7;
}

message SearchResponse {
  string result = 1;
}

message CreateRequest {
  string id =1;
  string data = 2;
}
message CreateResponse {
 string Status =1;
}

